--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.TeamProjectApplication"
         tools:targetApi="31">
         <activity
+            android:name=".fingerchoice"
+            android:exported="false" />
+        <activity
+            android:name=".chosunggame"
+            android:exported="false" />
+        <activity
+            android:name=".stopwatch"
+            android:exported="false" />
+        <activity
             android:name=".introsongintro"
             android:exported="false" />
         <activity
@@ -47,18 +56,6 @@
             android:exported="false" />
         <activity
             android:name=".relayspeaking"
-            android:exported="false" />
-        <activity
-            android:name=".chosungjob"
-            android:exported="false" />
-        <activity
-            android:name=".chosungdrama"
-            android:exported="false" />
-        <activity
-            android:name=".chosungsong"
-            android:exported="false" />
-        <activity
-            android:name=".chosungmovie"
             android:exported="false" />
         <activity
             android:name=".chosungmain"
